[package]
name = "ncryptf-rs"
authors = ["Charles R. Portwood II <charlesportwoodii@erianna.com>"]
description = "Secure API authentication and end to end encryption."
repository = "https://github.com/ncryptf/ncryptf-rs"
license = "BSD-3-Clause"
categories = ["cryptography", "authentication", "api-bindings"]
version = "0.2.12"
edition = "2021"

[registries.crates-io]
protocol = "sparse"

[dependencies]
libsodium-sys-stable = { version = "^1.20" }
thiserror = { version = "^1.0" }
chrono = "=0.4.30" 
base64 = { version = "^0.13" }
sha256 = { version = "1.0.3" }
hkdf = { version = "0.12.3" }
sha2 = { version = "^0.10"  }
hmac = { version = "^0.12" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
constant_time_eq = { version = "^0.3" }
hex = { version =  "^0.4" }
rand = { version = "^0.8" }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "data-transformers", features = ["tls", "secrets", "json"], optional = true  }
rocket_db_pools = { git = "https://github.com/rwf2/Rocket", branch = "data-transformers",  features = ["deadpool_redis"], optional = true }
rocket_dyn_templates = { git = "https://github.com/rwf2/Rocket", branch = "data-transformers", features = ["handlebars"], optional = true }
async-trait = { version = "^0.1", optional = true }
async-std = { version = "^1.12", optional = true }
reqwest = { version = "^0.11", default-features = false, features = ["json", "rustls-tls", "brotli", "gzip", "stream"], optional = true }
tracing = { version = "^0.1", optional = true }
async-recursion = { version = "^1.0", optional = true }
anyhow = { version = "^1.0", optional = true }
parking_lot = "0.12"

[lib]
name = "ncryptf"

[features]
default = []
rocket = ["dep:rocket", "dep:rocket_db_pools", "dep:async-trait", "dep:rocket_dyn_templates", "anyhow"]
client = ["dep:reqwest", "dep:tracing", "dep:async-recursion"]

[dev-dependencies]
reqwest = { version = "^0.11", default-features = false,  features = ["json", "blocking"] }
redis = { version = "^0.21" }

[badges]
github = { repository = "https://github.com/ncryptf/ncryptf-rs" }


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]

