[package]
name = "ncryptf-rs"
authors = ["Charles R. Portwood II <charlesportwoodii@erianna.com>"]
description = "Secure API authentication and end to end encryption."
repository = "https://github.com/ncryptf/ncryptf-rs"
license = "BSD-3-Clause"
categories = ["cryptography", "authentication", "api-bindings"]
version = "0.5.4"
edition = "2024"

[dependencies]
dryoc = { version = "0.7", default-features = false, features = ["base64", "serde"] }
thiserror = { version = "^2" }
chrono = { version = "^0.4" }
base64 = { version = "^0.22" }
sha256 = { version = "1.0.3" }
hkdf = { version = "^0.12" }
sha2 = { version = "^0.10"  }
hmac = { version = "^0.12" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
constant_time_eq = { version = "^0.4" }
hex = { version =  "^0.4" }
rand = { version = "^0.9" }
rocket = { version = "^0.5", features = ["tls", "secrets", "json"], optional = true }
async-trait = { version = "^0.1", optional = true }
async-std = { version = "^1.12", optional = true }
reqwest = { version = "^0.12", default-features = false, features = ["json", "rustls-tls", "brotli", "gzip", "stream"], optional = true }
tracing = { version = "^0.1"  }
async-recursion = { version = "^1.0", optional = true }
anyhow = { version = "^1.0", optional = true }
cached = { version = "^0.56", optional = true, features = ["async", "async-trait", "redis_store"] }
moka = { version = "^0.12", optional = true, features = ["sync"] }

[lib]
name = "ncryptf"

[features]
default = []
rocket = ["dep:rocket", "dep:async-trait", "anyhow", "dep:cached", "dep:moka"]
client = ["dep:reqwest", "dep:async-recursion"]

[dev-dependencies]
reqwest = { version = "^0.12", default-features = false,  features = ["json", "blocking"] }

[badges]
github = { repository = "https://github.com/ncryptf/ncryptf-rs" }


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]

